Atualizacao do auto cadastro
